# videoCompressor

./: .gitignore  README.md  config.json  pyproject.toml
client/: client.py
client_desktop_app/: README.md  package-lock.json  package.json  tsconfig.json
client_desktop_app/src/: index.html  main.ts  preload.ts  renderer.ts  style.css
server/: server.py
server/storage/: README.md
