[tool.poetry]
name = "videocompressor"
version = "0.1.0"
description = ""
authors = ["recursion-team"]
packages = [
    { include = "client" },
    { include = "server" }
]

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^45.0.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
